2005-10-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.AddIns/AddInTreeSingleton.cs: Created method
	InsertAddIn.
	* MonoDevelop.Core.AddIns/DefaultAddInTree.cs: The Core addin is now
	loaded like any other addin, so there is no need to load default
	codons and conditions here.
	* MonoDevelop.Core.Execution/ProcessService.cs: Lazily get ExecutionHandler
	information.
	* Makefile.am: Added files.
	* MonoDevelop.Core.addin.xml: Added application extension point.
	* MonoDevelop.Core/ServiceManager.cs: Added method for initializing
	the services for a given addin.
	* MonoDevelop.Core/Runtime.cs: Added AddInService and SetupService.
	
	* MonoDevelop.Core.Setup/*: New API for managing addins.

2005-09-28  Lluis Sanchez Gual  <lluis@novell.com>

	* Changed internal organization of files and namespaces.

2005-08-12  Lluis Sanchez Gual  <lluis@novell.com>

	* AddIns/Codons/AbstractCodon.cs: Make the ID attribute optional.
	In general, IDs are only needed when codons can be extended, or when
	the entity they represent requires an ID. There are some kind of codons
	which don't have any of those requirements, and the ID is not needed.
	
	* AddIns/AddIn.cs: Added method for getting a resource from an addin's
	asseblies.
	
	* AddIns/Codons/CodonFactory.cs:
	* AddIns/DefaultAddInTree.cs:
	* AddIns/Codons/DuplicateCodonException.cs: Improve error message.

2005-08-10  Ben Motmans  <ben.motmans@gmail.com>

	* MonoDevelop.Core.mdp: references update

2005-07-29  John Luke  <john.luke@gmail.com>

	* MonoDevelop.Core.mdp: add new files and references
	
2005-07-29  Lluis Sanchez Gual  <lluis@novell.com>

	* AddIns/AssemblyLoader.cs:
	* AddIns/DefaultAddInTree.cs:
	* AddIns/AddInTreeSingleton.cs: Added an assembly sanity check, which
	ensures that all addins reference the same assembly versions.

2005-07-22  John Luke  <john.luke@gmail.com>

	* AddIns/Addin.cs: remove unused variable warning
	
2005-07-18  Lluis Sanchez Gual  <lluis@novell.com> 
