@@ -1,3 +1,9 @@
+2005-10-06  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.Core.AddIns/ClassCodon.cs: Added Type property.
+	* MonoDevelop.Core.AddIns/AddInService.cs: Added method for getting
+	a codons list, not the items they build.
+
 2005-10-04  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.Core.AddIns/AddInTreeSingleton.cs: Created method
